# ExampleCppModule

./: .gitignore  README.md
cmake_demo/: CMakeLists.txt
cmake_demo/src/main/: main.cpp
cmake_demo/src/mymodule/: mymodule.cpp  mymodule.ixx
xmake_demo/: xmake.lua
xmake_demo/src/mod/: mod.cpp  mod.mpp
